typescript/checker/tests/conformance/parser/ecmascript5/parserAdditiveExpression1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('m' type=inline),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            1,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/parserAdditiveExpression1.ts:1:1
  |
1 | m.index+1+m[0].length;
  | ^

error: UndefinedSymbol {
    sym: Atom('m' type=inline),
    span: Span {
        lo: BytePos(
            10,
        ),
        hi: BytePos(
            11,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/parserAdditiveExpression1.ts:1:11
  |
1 | m.index+1+m[0].length;
  |           ^

